<resources>
    <string name="app_name">Poster</string>
    <string name="saturation">Saturation</string>
    <string name="align">Align</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="zero">0</string>
    <string name="back_to_original">Back to original</string>
    <string name="details">Details</string>
    <string name="blur">Blur</string>
    <string name="harshness">Harshness</string>
    <string name="warm">Warm</string>
    <string name="half">0.5</string>
    <string name="size">Size</string>
    <string name="place">Place</string>
    <string name="color">Color</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="crimson">Crimson</string>
    <string name="fill">Fill</string>
    <string name="filter">Filter</string>
    <string name="textIcon">TextIcon</string>
    <string name="shapeBox">ShapeBox</string>
    <string name="icons">Icons</string>
    <string name="flash_auto">Splash auto</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_off">Flash off</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="auto">auto</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="request_camera_permission">The poster needs camera permission</string>
    <string name="request_storage_permission">The poster needs storage permission</string>
    <string name="cannot_open_camera">Camera, can\'t be open</string>
    <string name="done">done</string>
    <string name="picture_taken">picture_taken</string>
</resources>
