<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flash_container"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    app:layout_constraintTop_toTopOf="@+id/flash_off_view">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_off"
        style="@style/FlashButtonStyle"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/off"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_on"
        style="@style/FlashButtonStyle"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/on"
        app:layout_constraintRight_toLeftOf="@+id/flash_off"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_auto"
        style="@style/FlashButtonStyle"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/auto"
        app:layout_constraintLeft_toRightOf="@+id/flash_off"
        />
</LinearLayout>