<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fill_progress_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/progress_fill_counter"
            style="@style/ProgressTextCounter"
            android:layout_below="@+id/seek_bar_fill"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/zero"/>


        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seek_bar_fill"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="82dp"
            android:layout_marginRight="82dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/progress_properties"
            android:thumb="@drawable/progress_pointer"
            >
        </android.support.v7.widget.AppCompatSeekBar>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fill_progress_cancel"
            style="@style/ProgressTexts"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:text="@string/cancel">
        </android.support.v7.widget.AppCompatTextView>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fill_progress_ok"
            style="@style/ProgressTexts"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:text="@string/ok">
        </android.support.v7.widget.AppCompatTextView>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fill_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        app:layout_constraintBottom_toBottomOf="parent"></android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
