<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/flash_auto_view"
        android:layout_width="12dp"
        android:layout_height="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_flash_auto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/flash_on_view"
        android:layout_width="12dp"
        android:layout_height="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_flash_on"
        app:layout_constraintRight_toLeftOf="@+id/flash_auto_view"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/flash_off_view"
        android:layout_width="12dp"
        android:layout_height="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_flash_off"
        app:layout_constraintRight_toLeftOf="@+id/flash_on_view"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_off"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/off"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/flash_off_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flash_off_view"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_on"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/on"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/flash_off_view"
        app:layout_constraintRight_toLeftOf="@+id/flash_off"
        app:layout_constraintTop_toTopOf="@+id/flash_off_view"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/flash_auto"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/auto"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/flash_off_view"
        app:layout_constraintLeft_toRightOf="@+id/flash_off"
        app:layout_constraintTop_toTopOf="@+id/flash_off_view"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/flash_off_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flash_off_view"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_snap"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/snap_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/gallery"
        app:layout_constraintRight_toLeftOf="@+id/button_change_cam"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/gallery"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_change_cam"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/ic_change_cam"
        app:layout_constraintBottom_toBottomOf="@+id/gallery"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>